@@ -13,8 +13,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <javafx.version>17.0.2</javafx.version> <!-- Or a newer stable version -->
         <sqlite.jdbc.version>3.36.0.3</sqlite.jdbc.version> <!-- Or a newer stable version -->
-        <gatling.version>3.11.3</gatling.version>
-        <scala.version>2.13.14</scala.version>
+        <gatling.version>3.14.3</gatling.version>
+        <scala.version>2.13.16</scala.version>
     </properties>
 
     <dependencies>
@@ -103,6 +103,20 @@
             <artifactId>jackson-module-mrbean</artifactId>
             <version>2.15.2</version>
         </dependency>
+
+        <!-- Scala Logging -->
+        <dependency>
+            <groupId>com.typesafe.scala-logging</groupId>
+            <artifactId>scala-logging_2.13</artifactId>
+            <version>3.9.5</version>
+        </dependency>
+
+        <!-- LOGBACK for SLF4J binding -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.12</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -113,6 +127,10 @@
                 <version>${gatling.version}</version>
                 <configuration>
                     <simulationClass>com.qa.app.util.DynamicJavaSimulation</simulationClass>
+                    <jvmArgs>
+                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+                    </jvmArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -120,11 +138,6 @@
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>4.8.1</version>
                 <executions>
-                    <execution>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
                 </executions>
             </plugin>
             <plugin>
@@ -142,6 +155,10 @@
                 <version>0.0.8</version> <!-- Or a newer stable version -->
                 <configuration>
                     <mainClass>com.qa.app.App</mainClass>
+                    <options>
+                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-opens=java.base/java.util=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
